force-app/main/default/objects/HM_Component_Detail_Map__c/HM_Component_Detail_Map__c.object-meta.xml
<CustomObject>
    <description>Field mappings for both Tile and List components</description>
    <label>Component Detail Map</label>
    <nameField>
        <label>Detail Map Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Component Detail Maps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>