force-app/main/default/objects/HM_Component_Detail_Map__c/fields/HM_Column_Badge_Type__c.field-meta.xml
<CustomField>
    <fullName>HM_Column_Badge_Type__c</fullName>
    <inlineHelpText>Badge type for list columns. Days Until/Over: Shows days difference from today using column&apos;s date field (e.g., &quot;3d left&quot; or &quot;3d over&quot;). SLA Risk: SLA risk indicator. New: &quot;New&quot; badge for recent records. Custom: Custom logic. None: No badge. Only for Map Type &quot;List Column&quot;.</inlineHelpText>
    <label>Column Badge Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Days Until/Over</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>