force-app/main/default/objects/HM_Component_Detail_Map__c/fields/HM_Column_Badge_Variant__c.field-meta.xml
<CustomField>
    <fullName>HM_Column_Badge_Variant__c</fullName>
    <inlineHelpText>Optional badge color override. If blank, color is automatically determined based on badge type. Success: Green. Warning: Orange. Error: Red.</inlineHelpText>
    <label>Column Badge Color</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto</fullName>
                <default>true</default>
                <label>Auto</label>
            </value>
            <value>
                <fullName>Success</fullName>
                <label>Success (Green)</label>
            </value>
            <value>
                <fullName>Warning</fullName>
                <label>Warning (Orange)</label>
            </value>
            <value>
                <fullName>Error</fullName>
                <label>Error (Red)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>