force-app/main/default/objects/HM_Component_Detail_Map__c/fields/HM_Comparison_Data_Source__c.field-meta.xml
<CustomField>
    <fullName>HM_Comparison_Data_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the data source for the comparison/baseline value (e.g., previous period). Only used for Tile Badge map type. Must be an Aggregate data source.</inlineHelpText>
    <label>Comparison Data Source</label>
    <referenceTo>HM_Dashboard_Data_Source__c</referenceTo>
    <relationshipLabel>Comparison Detail Maps</relationshipLabel>
    <relationshipName>Comparison_Detail_Maps</relationshipName>
    <type>Lookup</type>
</CustomField>