force-app/main/default/objects/HM_Component_Detail_Map__c/fields/HM_Comparison_Type__c.field-meta.xml
<CustomField>
    <fullName>HM_Comparison_Type__c</fullName>
    <inlineHelpText>How to calculate the badge from current and comparison values. Difference: Current minus Comparison. Percentage Change: ((Current - Comparison) / Comparison) x 100.</inlineHelpText>
    <label>Comparison Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Difference</fullName>
            </value>
            <value>
                <fullName>Percentage Change</fullName>
                <default>true</default>
                <label>Percentage Change</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>