force-app/main/default/objects/HM_Component_Detail_Map__c/fields/HM_Dashboard_Component__c.field-meta.xml
<CustomField>
    <fullName>HM_Dashboard_Component__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Select the dashboard component this detail map belongs to. Detail maps define how data fields are displayed in tiles or list columns.</inlineHelpText>
    <label>Dashboard Component</label>
    <referenceTo>HM_Dashboard_Component__c</referenceTo>
    <relationshipLabel>Component Detail Maps</relationshipLabel>
    <relationshipName>Component_Detail_Maps</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>