force-app/main/default/objects/HM_Component_Detail_Map__c/fields/HM_Data_Source__c.field-meta.xml
<CustomField>
    <fullName>HM_Data_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Required. Select the data source that provides the value for this mapping. For Tile Value, this is the main displayed number. For Tile Badge, this is the current period value for comparison. For List Column, this links the Field API Name to a specific data source.</inlineHelpText>
    <label>Data Source</label>
    <referenceTo>HM_Dashboard_Data_Source__c</referenceTo>
    <relationshipLabel>Component Detail Maps</relationshipLabel>
    <relationshipName>Component_Detail_Maps</relationshipName>
    <type>Lookup</type>
</CustomField>