force-app/main/default/objects/HM_Component_Detail_Map__c/fields/HM_Data_Source_Name__c.field-meta.xml
<CustomField>
    <fullName>HM_Data_Source_Name__c</fullName>
    <inlineHelpText>Name of the data source to use for this mapping. Must match the Name field on a Dashboard Data Source that belongs to this component. If blank, uses the first data source.</inlineHelpText>
    <label>Data Source Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>