force-app/main/default/objects/HM_Component_Detail_Map__c/fields/HM_Display_Order__c.field-meta.xml
<CustomField>
    <fullName>HM_Display_Order__c</fullName>
    <defaultValue>1</defaultValue>
    <inlineHelpText>Order for displaying this field mapping. For list columns, this determines column order (left to right). For tiles, this determines processing order. Lower numbers appear first. Leave blank to use alphabetical order.</inlineHelpText>
    <label>Display Order</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>