force-app/main/default/objects/HM_Component_Detail_Map__c/fields/HM_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>HM_Field_API_Name__c</fullName>
    <inlineHelpText>API name of the field from the data source (Apex method or SOQL query result). This must match a key in the returned data. For nested fields, use dot notation (e.g., Account.Name). Examples: pipelineValue, name, amount, accountName.</inlineHelpText>
    <label>Field API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>