force-app/main/default/objects/HM_Component_Detail_Map__c/fields/HM_Format_Type__c.field-meta.xml
<CustomField>
    <fullName>HM_Format_Type__c</fullName>
    <inlineHelpText>Select how the field value should be formatted for display. Currency: Formats as $ with K/M abbreviations. Number: Formats with K/M abbreviations. Percent: Formats as percentage. Date: Formats as date. Text: Displays as-is.</inlineHelpText>
    <label>Format Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Currency</fullName>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>Percent</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
                <default>true</default>
                <label>Text</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>