force-app/main/default/objects/HM_Component_Detail_Map__c/fields/HM_Is_Merge_Field__c.field-meta.xml
<CustomField>
    <fullName>HM_Is_Merge_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if the field value should be merged into text. For example, if the value is a count (e.g., 5), checking this will display it as &quot;5 open opportunities&quot; when used in a subtitle. Useful for Tile Subtitle mappings.</inlineHelpText>
    <label>Is Merge Field</label>
    <type>Checkbox</type>
</CustomField>