force-app/main/default/objects/HM_Component_Detail_Map__c/fields/HM_Label__c.field-meta.xml
<CustomField>
    <fullName>HM_Label__c</fullName>
    <inlineHelpText>Display label for this field. For list columns, this appears as the column header. For tiles, leave blank unless you need a custom label. If blank, the Field API Name will be used.</inlineHelpText>
    <label>Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>