force-app/main/default/objects/HM_Component_Detail_Map__c/fields/HM_Map_Type__c.field-meta.xml
<CustomField>
    <fullName>HM_Map_Type__c</fullName>
    <inlineHelpText>Select how this field maps to the component display. Tile Value: Main value displayed on tile. Tile Change: Change percentage/indicator. Tile Subtitle: Subtitle text below value. Tile Icon: Icon to display. Tile Badge: Badge indicator in top-right corner (percentage or count). List Column: Column in list/table view, can include column badges (e.g., &apos;3d left&apos;, &apos;SLA Risk&apos;) configured via Column Badge Type field.</inlineHelpText>
    <label>Map Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tile Value</fullName>
            </value>
            <value>
                <fullName>Tile Change</fullName>
            </value>
            <value>
                <fullName>Tile Subtitle</fullName>
            </value>
            <value>
                <fullName>Tile Icon</fullName>
            </value>
            <value>
                <fullName>List Column</fullName>
            </value>
            <value>
                <fullName>Tile Badge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>