force-app/main/default/objects/HM_Component_Detail_Map__c/fields/HM_Object_Type__c.field-meta.xml
<CustomField>
    <fullName>HM_Object_Type__c</fullName>
    <inlineHelpText>Comma-separated list of object API names this column applies to. Leave blank to apply to all object types. Example: Account,Contact,Opportunity</inlineHelpText>
    <label>Object Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>