force-app/main/default/objects/HM_Component_Detail_Map__c/recordTypes/List.recordType-meta.xml
<RecordType>
    <fullName>List</fullName>
    <active>true</active>
    <label>List</label>
</RecordType>